 
 * BREAKING CHANGES
    - variable $input-border-focus has been replaced with $input-border-color-focus
    - Renaming of helper classes
        - .hidden > .d-hidden
        - .inline > .d-inline
        - .inline-block > .d-inline-block
        - .block > .d-block
        - .flex > .d-flex
        - .display-table > .d-table
        - .display-table-cell > .d-table-cell

1.3.6 - 08-Sep-2017
~~~~~~~~~~~~~~~~~~~

 * Added new mixin to vertical align elements using translate -50%
 
1.3.5 - 09-Aug-2017
~~~~~~~~~~~~~~~~~~~

 * Removed font size in nested ul's due to ever decreasing in deeply nested 

1.3.4 - 01-Aug-2017
~~~~~~~~~~~~~~~~~~~

 * Added variable $input-use-full-width to set either the max-width:100% or width:100%
 * Added new mixin input-width to get the above value

1.3.3 - 20-Jul-2017
~~~~~~~~~~~~~~~~~~~
 
 * Added 3 new mixin to build buttons:
    - button
    - button-color-variation
    - button-hover
 * Created sample blog and thumbnail listing page

1.3.2 - 19-Jul-2017
~~~~~~~~~~~~~~~~~~~

 * Removed duplicate blockquote margin bottom from core
 * Added variable $generic-margin-bottom for pre, dl, figure, table, p, ul, ol, form, blockquote
 * Added variable $header-margin-bottom for h1-h6
 * Added variable $button-default-bg-color for the base button
 
1.3.1 - 14-Jul-2017
~~~~~~~~~~~~~~~~~~~

 * Added default button examples to test.html
 * Added basic grid examples to test.html
 * Fixed 0px lint warning
 * Removed vertical align from button due to odd inline issue
 * Added variable $input-font-color to set all inputs, selects, textareas
 * Added variable $input-margin-bottom to set all  inputs, selects, textareas, fieldsets
 
1.3.0 - 05-Jul-2017
~~~~~~~~~~~~~~~~~~~

 * Added new variable `$input-background-focus` for when an input, select or textarea has focus.
 * Removed `push-*` and `pull-*` grid classes in favour of `order-*`.
 * Simplified gutter widths to single variable `$grid-gutter-width`.

1.2.3 - 02-Jul-2017
~~~~~~~~~~~~~~~~~~~
